Whatever, I give up with trying to JEI this. Players will just have to guess.